--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
         
         <div class="resumebtn">
-            <a href="https://drive.google.com/file/d/1rZiXl562q7aVyk1kJ2nO85YBAq8ixTiw/view" target="_blank" class="btn"><span>Resume</span>
+            <a href="https://ln5.sync.com/dl/71160f090/uw8rvadi-k35euvr9-xqh8dy4y-vttk7xj5" target="_blank" class="btn"><span>Resume</span>
                 <i class="fas fa-chevron-right"></i>
             </a>
         </div>
