--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
           <li><a class="active" href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
-          <li><a href="#education">Education</a></li>
+          <!-- <li><a href="#education">Education</a></li> -->
           <li><a href="#work">Work</a></li>
-          <li><a href="#experience">Experience</a></li>
+          <!-- <li><a href="#experience">Experience</a></li> -->
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
@@ -99,7 +99,7 @@
                 ><i class="fab fa-twitter"></i
               ></a>
             </li>
-            <li>
+            <!-- <li>
               <a
                 class="telegram"
                 aria-label="Telegram"
@@ -107,16 +107,16 @@
                 target="_blank"
                 ><i class="fab fa-telegram-plane"></i
               ></a>
-            </li>
-            <li>
+            </li> -->
+            <!-- <li>
               <a
                 class="instagram"
                 aria-label="Instagram"
                 href="https://www.instagram.com/"
                 ><i class="fab fa-instagram" target="_blank"></i
               ></a>
-            </li>
-            <li>
+            </li> -->
+            <!-- <li>
               <a
                 class="dev"
                 aria-label="Dev"
@@ -124,7 +124,7 @@
                 target="_blank"
                 ><i class="fab fa-dev"></i
               ></a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
@@ -150,7 +150,7 @@
           <img
             draggable="false"
             class="tilt"
-            src="./assets/images/me.jpg"
+            src="./assets/images/profile.png"
             alt=""
           />
         </div>
@@ -159,23 +159,23 @@
           <span class="tag">Full Stack Developer</span>
 
           <p>
-            I am a Full-Stack developer based in Mombasa, Kenya. I am an
+            I am a Full-Stack developer based in Nairobi, Kenya. I am a
             Information Technology undergraduate. I am very passionate about
             improving my coding skills & developing applications & websites. I
-            build WebApps and Websites using MERN Stack. Working for myself to
+            build WebApps and Websites using modern Technologies. Working for myself to
             improve my skills. Love to build Full-Stack clones.
           </p>
 
           <div class="box-container">
             <div class="box">
               <p><span> email : </span> okiomeriv@gmail.com</p>
-              <p><span> place : </span> Mombasa, Kenya</p>
+              <p><span> place : </span> Nairobi, Kenya</p>
             </div>
           </div>
 
           <div class="resumebtn">
             <a
-              href="https://ln5.sync.com/dl/71160f090/uw8rvadi-k35euvr9-xqh8dy4y-vttk7xj5"
+              href="https://ln5.sync.com/dl/6d9130df0#iqjiyb35-zpysvnr4-dg6uzpwr-qafmdz94"
               target="_blank"
               class="btn"
               ><span>Resume</span>
@@ -200,7 +200,7 @@
     <!-- skills section ends -->
 
     <!-- education section starts -->
-    <section class="education" id="education">
+    <!-- <section class="education" id="education">
       <h1 class="heading">
         <i class="fas fa-graduation-cap"></i> My <span>Education</span>
       </h1>
@@ -241,7 +241,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- education section ends -->
 
     <!-- work project section starts -->
@@ -262,7 +262,7 @@
     <!-- work project section ends -->
 
     <!-- experience section starts -->
-    <section class="experience" id="experience">
+    <!-- <section class="experience" id="experience">
       <h2 class="heading"><i class="fas fa-briefcase"></i> Experience</h2>
 
       <div class="timeline">
@@ -290,7 +290,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- experience section ends -->
 
     <!-- contact section starts -->
@@ -358,13 +358,13 @@
           <a href="#skills"
             ><i class="fas fa-chevron-circle-right"></i> skills</a
           >
-          <a href="#education"
+          <!-- <a href="#education"
             ><i class="fas fa-chevron-circle-right"></i> education</a
-          >
+          > -->
           <a href="#work"><i class="fas fa-chevron-circle-right"></i> work</a>
-          <a href="#experience"
+          <!-- <a href="#experience"
             ><i class="fas fa-chevron-circle-right"></i> experience</a
-          >
+          > -->
         </div>
 
         <div class="box">
