--- a/experience/index.html
+++ b/experience/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link id='favicon' rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-png">
 
-    <title>Experience | Portfolio Jigar Sable</title>
+    <title>Experience | Portfolio Victor Mongare</title>
 </head>
 <body oncontextmenu="return false">
 
 <!-- navbar starts -->
 <header>
-        <a href="/" class="logo"><i class="fab fa-node-js"></i> Jigar</a>
+        <a href="/" class="logo"><i class="fab fa-node-js"></i> Victor</a>
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
@@ -40,7 +40,7 @@
       <span>every experience in your life is being orchestrated to teach you something you need to know to move forward.</span>
   </div>
 
-  <div class="timeline">
+  <!-- <div class="timeline">
 
     <div class="container left">
       <div class="content">
@@ -49,7 +49,7 @@
         </div>
         <div class="desc">
             <h3>Full Stack Developer</h3>
-            <p>Oct 2021 - present</p>
+            <p>Oct 2023 - present</p>
         </div>
       </div>
     </div>
@@ -150,7 +150,7 @@
         </div>
       </div>
 
-  </div>
+  </div> -->
 
   <div class="morebtn">
     <a href="/#experience" class="btn">
@@ -169,7 +169,7 @@
   <div class="box-container">
 
       <div class="box">
-          <h3>Jigar's Portfolio</h3>
+          <h3>Victor's Portfolio</h3>
           <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/> Keep Rising 🚀. Connect with me over live chat!</p>
       </div>
 
@@ -185,21 +185,21 @@
 
       <div class="box">
           <h3>contact info</h3>
-          <p> <i class="fas fa-phone"></i>+91 704-302-4736</p>
-          <p> <i class="fas fa-envelope"></i>jigarsable21@gmail.com</p>
-          <p> <i class="fas fa-map-marked-alt"></i>Pune, India-412206</p>
+          <p> <i class="fas fa-phone"></i>+254 115560**7</p>
+          <p> <i class="fas fa-envelope"></i>okiomeriv@gmail.com</p>
+          <p> <i class="fas fa-map-marked-alt"></i>Nairobi, Kenya</p>
           <div class="share">
 
-            <a href="https://www.linkedin.com/in/jigar-sable" class="fab fa-linkedin" target="_blank"></a>
-            <a href="https://github.com/jigar-sable" class="fab fa-github" target="_blank"></a>
-            <a href="mailto:jigarsable21@gmail.com" class="fas fa-envelope" target="_blank"></a>
-            <a href="https://twitter.com/jigar_sable" class="fab fa-twitter" target="_blank"></a>
-            <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" target="_blank"></a>
+            <a href="https://www.linkedin.com/in/victor-mongare" class="fab fa-linkedin" target="_blank"></a>
+            <a href="https://github.com/victoroki" class="fab fa-github" target="_blank"></a>
+            <a href="mailto:okiomeriv@gmail.com" class="fas fa-envelope" target="_blank"></a>
+            <a href="https://twitter.com/Victor_tum_ke" class="fab fa-twitter" target="_blank"></a>
+            <!-- <a href="https://t.me/f5" class="fab fa-telegram-plane" target="_blank"></a> -->
           </div>
       </div>
   </div>
 
-  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/jigar-sable"> jigar sable</a></h1>
+  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/victor-mongare"> Victor okiomeri</a></h1>
 
 </section>
 <!-- footer section ends -->
