--- a/projects/index.html
+++ b/projects/index.html
@@ -49,37 +49,40 @@
 
       <div id="filters" class="button-group">
         <button class="btn is-checked" data-filter="*">All Projects</button>
-        <button class="btn" data-filter=".mern">MERN Stack</button>
-        <button class="btn" data-filter=".lamp">LAMP Stack</button>
-        <button class="btn" data-filter=".basicweb">Basic Web</button>
-        <button class="btn" data-filter=".android">Android App</button>
+        <button class="btn" data-filter=".php">PHP Projects</button>
+        <button class="btn" data-filter=".laravel">Laravel Projects</button>
+        <button class="btn" data-filter=".react">React Projects</button>
+        <button class="btn" data-filter=".python">Python Projects</button>
+        <button class="btn" data-filter=".basic-web">Basic Web</button>
       </div>
 
       <div class="box-container">
-        <!-- <div class="box tilt">
-      <img src="/assets/images/projects/agecalc.PNG" alt="" />
-      <div class="content">
-        <div class="tag">
-        <h3>Portfolio Website</h3>
-        </div>
-        <div class="desc">
-          <p>Personal portfolio website. Don't need much info about it, just scroll down. You're here only!</p>
-          <div class="btns">
-            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
-          </div>
-        </div>
-      </div>
-    </div> -->
+        <!-- Projects will be loaded here dynamically -->
       </div>
 
       <div class="backbtn">
-        <a href="#work" class="btn">
+        <a href="/" class="btn">
           <i class="fas fa-arrow-left"></i>
           <span>Back to Home</span>
         </a>
       </div>
     </section>
+
+    <!-- Project Modal -->
+    <div id="projectModal" class="modal">
+      <div class="modal-content">
+        <span class="close-modal">&times;</span>
+        <img id="modalImage" src="" alt="Project Screenshot">
+        <div class="modal-info">
+          <h3 id="modalTitle"></h3>
+          <p id="modalDesc"></p>
+          <p class="not-deployed">Note: This project is not currently deployed</p>
+          <div class="modal-links">
+            <a id="modalCodeLink" href="#" class="btn" target="_blank">View Code <i class="fas fa-code"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- work project section ends -->
 
     <!-- scroll top btn -->
